index.css
/* ... */
 #contraction-container {
    position: fixed;
    margin-top: 50px;
}

#contraction-check {
    margin: 10px;
}

/* Base styling */
.create-wordplay-button {
    font-size: 18px;
    font-weight: bold;
    color: white;
    background: linear-gradient(45deg, #ff416c, #ff4b2b);
    border: none;
    padding: 12px 20px;
    border-radius: 50px;
    cursor: pointer;
    transition: all 0.3s ease-in-out;
    box-shadow: 0 5px 15px rgba(255, 65, 108, 0.4);
    outline: none;
    position: relative;
    overflow: hidden;
}

/* Button Hover: Expands slightly and shifts colors */
.create-wordplay-button:hover {
    transform: scale(1.05);
    background: linear-gradient(45deg, #ff4b2b, #ff416c);
    box-shadow: 0 8px 20px rgba(255, 65, 108, 0.6);
}

/* Button Click: Press-down effect */
.create-wordplay-button:active {
    transform: scale(0.98);
    box-shadow: 0 3px 10px rgba(255, 65, 108, 0.5);
}

/* Glowing Border Effect */
.create-wordplay-button::before {
    content: "";
    position: absolute;
    top: -2px;
    left: -2px;
    right: -2px;
    bottom: -2px;
    border-radius: 50px;
    background: linear-gradient(45deg, #ff416c, #ff4b2b, #ff416c);
    z-index: -1;
    opacity: 0;
    transition: opacity 0.3s ease-in-out;
}

/* Border appears on hover */
.create-wordplay-button:hover::before {
    opacity: 1;
}


footer {
    color: blueviolet;
    font-family: 'Palanquin', sans-serif;
    position: fixed;
    bottom: 5;
    display: flex;
    width: 100%;
    justify-content: start;
}

footer > div {
    padding: 5px;
}

/* Style all font awesome icons */
.fa {
    font-size: 30px;
    width: 30px;
    text-align: center;
    text-decoration: none;
    border-radius: 30%;
  }

  .fa:hover {
    opacity: 0.7;
  }

  /* Facebook */
.fa-instagram {
    background: #e95950;
    color: white;
  }

  /* Github */
  .fa-github {
    background: black;
    color: white;
  }

#hint-button {
    position: fixed;
    cursor: pointer;
    top: 64px;
    left: 20px;
    margin: 5px;
    font-family: 'Palanquin', sans-serif;
    color: white;
    padding: 5px;
    background-color: blueviolet;
    border-radius: 4px;
    text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
}

#hint-button:hover {
    opacity: 0.7;
}

#sentence-container {
    /* border: black solid 2px; */
    position: absolute;
    width: 100vw;
}

#input-sentence {
    width: 70%;
    border-radius: 4px;
    font-size: large;
    margin: 5px"
}


.grid-container {
    display: grid;
    grid-template-areas:
    "hero hero  hero "
    ".    shoot  .   "
    "left switch right";
}

#name-tag {
    color: var(--color);
    text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
}

#control-buttons {
    position: fixed;
        bottom: 50;
        right: 30;
}

/* @media screen and (max-width: 1280px) { */
    #control-buttons > input {
        color: white;
        text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
        background-color: var(--color);
        border-radius: 4px;
        margin: 5px;
        padding: 5px;
        touch-action: none;
    }
    /* } */

    #shoot-button {
        grid-area: shoot;
        cursor: pointer;
    }

    #left-button {
        grid-area: left;
        cursor: pointer;
    }

    #switch-button {
        grid-area: switch;
        cursor: pointer;
    }

    #right-button {
        grid-area: right;
        cursor: pointer;
    }

    #name-tag {
        grid-area: hero;
    }

    #output  {
        /* color: red; */
        font-size: 300%;
        margin: 50px;
        position: fixed;
        top: 110px; /* below nav (44px) + buttons (~64px) */
        color: whitesmoke;
        text-shadow:  1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
        font-family: 'Palanquin', sans-serif;
    }

    .capital-black-hole {
        position: relative;
    }

    /* https://stackoverflow.com/questions/65839588/how-do-i-apply-transitions-to-pseudo-elements */
    .blackhole-expand {
        transition: 2s;
        display: inline-block;
        transform: rotate(359deg) scale(0.75, 1);
        color: black;
    }

    .blackhole-expand::after {
        content: "";
        display: inline-block;
        position: absolute;
        z-index: -100;
        width: 80px;
        height: 80px;
        background-color: black;
        left: 50%;
        margin-top: 7px;
        margin-left: -40px;
        border-radius: 50%;
        transition: all 1s;
    }

    .blackhole-collapse::after {
        content: "";
        display: inline-block;
        position: absolute;
        z-index: -200;
        width: 0px;
        height: 0px;
        background-color: black;
        border-radius: 50%;
        transition: all 1s;
    }


    #subtitle {
        margin: 50px;
        position: fixed;
        font-family: 'Palanquin', sans-serif;
    }


    #punc-button {
        margin: 5px;
        font-family: 'Palanquin', sans-serif;
        color: white;
        padding: 2px;
        background-color: blueviolet;
        border-radius: 4px;
    }

    body {
        margin: 0
    }

    .hidden-punc {
        visibility: hidden;
        /* color: white; */
    }

    .highlighted-punc {
        /* background-color: red; */
        visibility: visible;
        color: white;
        text-shadow: none;
        border: dashed lightblue 2px;
    }

    #start {
        text-align: center;
    }

    #ending-message-container {
        display: flex;
        flex-direction: column;
        position: absolute;
        top: 20%;
        margin: 10%;
    }

    #ending-message-container > h3 {
        color: white;
        font-family: 'Palanquin', sans-serif;
        text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
    }
/* ... */

